FT2-282: Update the code of custom theme.

--- a/web/themes/custom/custom_theme/templates/block/block.html.twig
+++ b/web/themes/custom/custom_theme/templates/block/block.html.twig
@@ -50,7 +50,7 @@
   {% block content %}
     <div{{ content_attributes.addClass('block__content') }}>
       {{ content }}
-      {# Hello World sujay. #}
+      Hello World sujay.
     </div>
   {% endblock %}
 </div>
